@@ -1,3 +1,12 @@
+2011-06-13  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
+
+	* bootstrap.sh: autoreconf implicitly calls libtoolize.
+
+	* m4/boost.m4: Sync with rpath_bug branch
+	<https://raw.github.com/tsuna/boost.m4/rpath_bug/build-aux/boost.m4>
+	to fix a macosx linker related bug, see
+	<https://github.com/tsuna/boost.m4/issues/19>.
+
 2011-05-30  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* m4/boost.m4: Sync with newest version of boost.m4 from
